--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@actions/core": "^1.2.6",
+    "@types/glob": "^7.1.3",
     "@types/node": "^14.14.22",
     "glob": "^7.1.6",
     "ts-node": "^8.10.2",
@@ -32,6 +33,6 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "build": "tsc",
-    "publish": "yarn build && npm publish"
+    "deploy": "yarn build && npm publish"
   }
 }
