--- a/package.json
+++ b/package.json
@@ -24,9 +24,8 @@
   },
   "dependencies": {
     "@actions/core": "^1.2.6",
-    "@types/glob": "^7.1.3",
     "@types/node": "^14.14.22",
-    "glob": "^7.1.6",
+    "fast-glob": "^3.2.5",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
   },
