--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
   },
   "dependencies": {
     "@actions/core": "^1.2.6",
+    "@types/command-line-args": "^5.0.0",
+    "@types/command-line-usage": "^5.0.1",
     "@types/node": "^14.14.22",
     "chalk": "^4.1.0",
+    "command-line-args": "^5.1.1",
+    "command-line-usage": "^6.1.1",
     "fast-glob": "^3.2.5",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
